[gd_scene load_steps=5 format=2]

[ext_resource path="res://levels/level1WaveBased/Waves/wave3.gd" type="Script" id=1]
[ext_resource path="res://levels/level1WaveBased/DiveZoneExtents.gd" type="Script" id=2]
[ext_resource path="res://levels/level1WaveBased/Debug.gd" type="Script" id=3]
[ext_resource path="res://fonts/Main Text Font.tres" type="DynamicFont" id=4]

[node name="waveStarter" type="Node2D"]
script = ExtResource( 1 )

[node name="viewport_hint" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -320, -180, -320, 180, 320, 180, 320, -180 )

[node name="GruntFormationPoints" type="Node2D" parent="."]
modulate = Color( 1, 0.913725, 0, 1 )

[node name="C2" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 192, -112 )

[node name="UpperZone" type="Node2D" parent="GruntFormationPoints/C2"]
position = Vector2( -252, 91 )
script = ExtResource( 2 )
TopLeft = Vector2( 227, -145 )
BottomRight = Vector2( 257, -119 )

[node name="TopLeft" type="Position2D" parent="GruntFormationPoints/C2/UpperZone"]
position = Vector2( 227, -145 )

[node name="BottomRight" type="Position2D" parent="GruntFormationPoints/C2/UpperZone"]
position = Vector2( 257, -119 )

[node name="LowerZone" type="Node2D" parent="GruntFormationPoints/C2"]
position = Vector2( -252, 91 )
script = ExtResource( 2 )
TopLeft = Vector2( 236, 108 )
BottomRight = Vector2( 267, 140 )

[node name="TopLeft" type="Position2D" parent="GruntFormationPoints/C2/LowerZone"]
position = Vector2( 236, 108 )

[node name="BottomRight" type="Position2D" parent="GruntFormationPoints/C2/LowerZone"]
position = Vector2( 267, 140 )

[node name="rally" type="Node2D" parent="GruntFormationPoints/C2"]
position = Vector2( -7, 1 )

[node name="C2" type="Position2D" parent="GruntFormationPoints/C2/rally"]
position = Vector2( -52, 196 )

[node name="C3" type="Position2D" parent="GruntFormationPoints/C2/rally"]
position = Vector2( -57, 8 )

[node name="C4" type="Position2D" parent="GruntFormationPoints/C2/rally"]
position = Vector2( -56, 33 )

[node name="C5" type="Position2D" parent="GruntFormationPoints/C2/rally"]
position = Vector2( -51, 251 )

[node name="C7" type="Position2D" parent="GruntFormationPoints/C2/rally"]
position = Vector2( -59, 119 )

[node name="C6" type="Position2D" parent="GruntFormationPoints/C2/rally"]
position = Vector2( -58, 68 )

[node name="C" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 204, 103 )

[node name="UpperZone" type="Node2D" parent="GruntFormationPoints/C"]
position = Vector2( -252, 91 )
script = ExtResource( 2 )
TopLeft = Vector2( 215, -331 )
BottomRight = Vector2( 245, -305 )

[node name="TopLeft" type="Position2D" parent="GruntFormationPoints/C/UpperZone"]
position = Vector2( 215, -331 )

[node name="BottomRight" type="Position2D" parent="GruntFormationPoints/C/UpperZone"]
position = Vector2( 245, -305 )

[node name="LowerZone" type="Node2D" parent="GruntFormationPoints/C"]
position = Vector2( -252, 91 )
script = ExtResource( 2 )
TopLeft = Vector2( 226, -72 )
BottomRight = Vector2( 257, -40 )

[node name="TopLeft" type="Position2D" parent="GruntFormationPoints/C/LowerZone"]
position = Vector2( 226, -72 )

[node name="BottomRight" type="Position2D" parent="GruntFormationPoints/C/LowerZone"]
position = Vector2( 257, -40 )

[node name="rally" type="Node2D" parent="GruntFormationPoints/C"]
position = Vector2( -7, 1 )

[node name="C2" type="Position2D" parent="GruntFormationPoints/C/rally"]
position = Vector2( -67, -43 )

[node name="C3" type="Position2D" parent="GruntFormationPoints/C/rally"]
position = Vector2( -63, 8 )

[node name="C4" type="Position2D" parent="GruntFormationPoints/C/rally"]
position = Vector2( -72, -257 )

[node name="C5" type="Position2D" parent="GruntFormationPoints/C/rally"]
position = Vector2( -71, -235 )

[node name="C6" type="Position2D" parent="GruntFormationPoints/C/rally"]
position = Vector2( -69, -118 )

[node name="C7" type="Position2D" parent="GruntFormationPoints/C/rally"]
position = Vector2( -70, -70 )

[node name="B1" type="Node2D" parent="GruntFormationPoints"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -96, 8 )

[node name="C" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 57, -155 )

[node name="C2" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 114, -156 )

[node name="C3" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 55, -113 )

[node name="C4" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 112, -111 )

[node name="C5" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 56, -67 )

[node name="C7" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 56, -28 )

[node name="C8" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 116, -28 )

[node name="C9" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 116, 37 )

[node name="C11" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 116, 72 )

[node name="C13" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 116, 99 )

[node name="C14" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 53, 99 )

[node name="C15" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 53, 130 )

[node name="C12" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 53, 72 )

[node name="C10" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 53, 38 )

[node name="C6" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 116, -68 )

[node name="M" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 115, 130 )

[node name="DiveZoneExtents" type="Node2D" parent="."]
position = Vector2( 0, -7 )
script = ExtResource( 2 )
TopLeft = Vector2( -297, -168 )
BottomRight = Vector2( -66, 174 )

[node name="TopLeft" type="Position2D" parent="DiveZoneExtents"]
position = Vector2( -297, -168 )

[node name="BottomRight" type="Position2D" parent="DiveZoneExtents"]
position = Vector2( -66, 174 )

[node name="Spawners" type="Node2D" parent="."]
modulate = Color( 0.992157, 0.0823529, 1, 1 )

[node name="C" type="Position2D" parent="Spawners"]
position = Vector2( 97, -2 )

[node name="EnemyDump" type="Node2D" parent="."]

[node name="BulletsDump" type="Node2D" parent="."]

[node name="Debug" type="Label" parent="."]
anchor_left = -0.488
anchor_top = -0.486
anchor_right = -0.488
anchor_bottom = -0.486
margin_left = 178.0
margin_top = -177.0
margin_right = 307.0
margin_bottom = -163.0
custom_fonts/font = ExtResource( 4 )
script = ExtResource( 3 )

[node name="shot_timer" type="Timer" parent="."]
